@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 Feb 2012; Трацевский Александр <alex@gentoo.org>
+  -cl-gnome-meta-3.2.ebuild, cl-gnome-meta-3.2.1-r1.ebuild:
+  remove old version
+
 *cl-gnome-meta-3.2 (23 Jan 2012)
 
   23 Jan 2012; <guest@gentoo.org> +cl-gnome-meta-3.2.ebuild:
